--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-><html>
+<html>
     <head>
         <title>Login Page</title>
     </head>
     <body>
-        Name<
+        Name:
     </body>
-</html>o
+</html>
