--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html>
     <head>
         <title>Login Page</title>
+        <style>
+            div{
+                font-size:0.7cm;
+                margin:5cm 14cm;
+                text-align:center;
+                width:40px;
+                height:10px;
+            }
+        </style>
     </head>
     <body>
-        Name:
-    </body>
+        <div>
+            Name:<input type="text">
+            Class:<input type="text">
+            Roll no.:<input type="text">
+            Subject:<input type="text">
+        </div>
+        </body>
 </html>
