--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <style>
             div{
                 font-size:0.7cm;
-                margin:5cm 14cm;
                 text-align:center;
                 width:40px;
                 height:10px;
@@ -13,11 +12,15 @@
         </style>
     </head>
     <body>
+        <div style="margin: 5cm 14cm">
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Class">
+            <input type="text" placeholder="Roll Number">
+            <input type="text" placeholder="Subject">
+        </div>
         <div>
-            Name:<input type="text">
-            Class:<input type="text">
-            Roll no.:<input type="text">
-            Subject:<input type="text">
+            <input type="text" placeholder="Username">
+            <input type="text" placeholder="Password">
         </div>
         </body>
 </html>
