--- a/index.html
+++ b/index.html
@@ -3,24 +3,75 @@
     <head>
         <title>Login Page</title>
         <style>
+         .top{
+                position:relative;
+                margin:-1%;
+                font-size:35px;
+                background-color:navy;
+                color:white;
+                font-family:sans-serif;
+                width:100%;
+
+                height:75px;
+            }
+
             div{
+                position:fixed;
+                margin-top:5%;
                 font-size:0.7cm;
                 text-align:center;
                 width:40px;
                 height:10px;
             }
+            div>input{
+                border-radius:12px;
+                border:solid 1px grey;
+                font-size:20px;
+                padding:10px;
+                margin:0.7em;
+                width:12cm;
+                height:1cm;
+            }
+            div>span{
+                position:relative;
+                left:10px;
+
+            }
+            div >button{
+                border-radius:12px;
+                margin-left:140px;
+                text-align:center;
+                color:white;
+                font-size:25px;
+                border:0px;
+                background-color:green;
+                width:200px;
+                height:45px;
+            }
         </style>
     </head>
     <body>
-        <div style="margin: 5cm 14cm">
+        <header class="top">
+             <span style="position:relative;top:10px;left:10px"><b>ExamSoft</b><prep>&nbsp;&nbsp; Rizvi College</span>
+        </header>
+
+        <div style="margin-left:50%">
+            <span >Students zone</span>
+            <form id="students">
             <input type="text" placeholder="Name">
             <input type="text" placeholder="Class">
             <input type="text" placeholder="Roll Number">
             <input type="text" placeholder="Subject">
+            <button type="submit"> Login</button>
+            </form>
         </div>
         <div>
+            <form id="Professors">
+            <span>Professors zone</span>
             <input type="text" placeholder="Username">
-            <input type="text" placeholder="Password">
+            <input type="password" placeholder="Password">
+            <button type="submit">Login</button>
+            </form>
         </div>
         </body>
 </html>
