--- a/question.html
+++ b/question.html
@@ -4,55 +4,68 @@
         <title>Questions</title>
     <style>
         form>div{
-                position:relative;
-                margin-top:5%;
-                font-size:0.7cm;
-                text-align:center;
-                margin-left:30%;
-                width:40px;
-                height:10px;
-            }
-             form>div>input{
-                border-radius:12px;
-                border:solid 1px grey;
-                font-size:20px;
-                padding:10px;
-                margin:0.7em;
-                width:12cm;
-                height:1cm;
-            }
-             form>div>button{
-                border-radius:12px;
-                margin-left:140px;
-                text-align:center;
-                color:white;
-                font-size:25px;
-                border:0px;
-                background-color:green;
-                width:200px;
-                height:45px;
-            }
-            form>div>input{
-                position:relative;
-            }
-
+            position:relative;
+            margin-top:7%;
+            margin-left:25%;    
+        }
+        form>div>input{
+            position: relative;
+            margin-top:0.5cm;
+            width:10cm;
+            height:1cm;
+            border-radius:4px;
+            border:solid 1px grey;
+            font-size:15px;  
+            margin-left:25%;
+        }
+        form>div>button{
+            border-radius:8px;
+            border:0px;
+            width:150px;
+            height:40px;
+            font-size:18px;
+            text-align:center;
+            margin-left:42%;
+            color:white;
+            background-color:green;
+            margin-top:5%;
+        }
+        form>div>span{
+            font-size:20px;
+        }
+        form>div>select{
+            position: relative;
+            margin-left: 36%;
+            margin-top:0.5cm;
+            width:150px;
+            height:40px;
+            border-radius:4px;
+            border:solid 1px grey;
+        }
     </style>
-
     </head>
     <body>
         <form id="QPaper">
-
-
-
-                <p style="color:grey;">Branch</p>
-                Cs<input type="radio" name="group" value="Cs" style="">
-                It<input type="radio" name="group" value = "It">
-
-           <div>
-               <input type="text" placeholder="Question paper code">
-               <input type="text" placeholder="Class">
-               <input type="text" placeholder="Total number of question">
-               <button type="Submit">Create question</button>
+            <div>
+                
+                <span>Branch</span><select>
+                    <option value="Cs">CS</option>
+                    <option value="It">IT</option>
+                </select> <br>
+                <span>Semester</span><select style="margin-left:34.5%">
+                    <option value="1">1</option>
+                    <option value="1">2</option>
+                    <option value="1">3</option>
+                    <option value="1">4</option>
+                    <option value="1">5</option>
+                    <option value="1">6</option>
+                </select>   
+                <br>
+                <span>Question paper code(6 digit)*</span><input type="text" pattern="[0-9]{6}" maxlength="6" style="margin-left: 17.5%"><br>
+                <span>Subject Name</span><input type="text" style="margin-left:30%"><br>
+                <span>Total number of questions</span><input type="text" style="margin-left: 20.5%"><br>
+                <span>Total time in minute</span><input type="text"><br>
+                <button type="Submit">Create Exam</button>
             </div>
         </form>
     </body>
