--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
                 width:100%;
                 height:75px;
             }
-
             div{
                 position:fixed;
                 margin-top:5%;
@@ -47,6 +46,15 @@
                 width:200px;
                 height:45px;
             }
+            form>div>select{
+                border-radius:12px;
+                border:solid 1px grey;
+                font-size:20px;
+                padding:10px;
+                margin:0.7em;
+                width:6cm;
+                height:1.6cm;
+        }
         </style>
     </head>
     <body>
@@ -56,14 +64,26 @@
         <form id="Students">
             <div style="margin-left:50%">
                 <span >Students zone</span>
-                <input type="text" placeholder="Name">
-                <input type="text" placeholder="Class">
+               <select>
+                    <option display:none value="" disabled selected hidden><p>Branch</p></option>
+                    <option value="Cs">CS</option>
+                    <option value="It">IT</option>
+                </select> <br>
+                <select style="position:absolute;margin-left:7cm;margin-top:-1.95cm;">
+                    <option display:none value:"" disabled selected hidden>Semester</option>
+                    <option value="1">1</option>
+                    <option value="1">2</option>
+                    <option value="1">3</option>
+                    <option value="1">4</option>
+                    <option value="1">5</option>
+                    <option value="1">6</option>
+                </select>   
+                <input type="text" placeholder="Full Name">
                 <input type="text" placeholder="Roll Number">
-                <input type="text" placeholder="Subject">
+                <input type="text" placeholder="Subject Code(6 digit)*" pattern="[0-9]{6}" maxlength="6">
                 <button type="submit"> Login</button>
             </div>
         </form>
-
         <form id="Professor">
             <div>
                 <span>Professors zone</span>
@@ -72,5 +92,5 @@
                     <button type="submit">Login</button>
             </div>
         </form>
-        </body>
+    </body>
 </html>
