--- a/question.html
+++ b/question.html
@@ -25,20 +25,21 @@
             height:40px;
             font-size:18px;
             text-align:center;
-            margin-left:42%;
+            margin-left:44%;
             color:white;
             background-color:green;
             margin-top:5%;
         }
         form>div>span{
+            position: relative;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-size:20px;
         }
         form>div>select{
             position: relative;
             margin-left: 36%;
             margin-top:0.5cm;
-            width:150px;d:
-            d
+            width:150px;
             height:40px;
             border-radius:4px;
             border:solid 1px grey;
@@ -53,7 +54,7 @@
                     <option value="Cs">CS</option>
                     <option value="It">IT</option>
                 </select> <br>
-                <span>Semester</span><select style="margin-left:34.5%">
+                <span>Semester</span><select style="margin-left:33.5%">
                     <option value="1">1</option>
                     <option value="1">2</option>
                     <option value="1">3</option>
@@ -62,8 +63,8 @@
                     <option value="1">6</option>
                 </select>   
                 <br>
-                <span>Question paper code(6 digit)*</span><input type="text" pattern="[0-9]{6}" maxlength="6" style="margin-left: 17.5%"><br>
-                <span>Subject Name</span><input type="text" style="margin-left:30%" list="Subject"><br>
+                <span>Question paper code(6 digit)*</span><input type="text" pattern="[0-9]{6}" maxlength="6" style="margin-left: 13%"><br>
+                <span>Subject Name</span><input type="text" style="margin-left:29%" list="Subject"><br>
                 <datalist id="Subject">
                     <option value="Theroy of Computation">
                     <option value="Core JAVA">
@@ -73,8 +74,8 @@
                     <option value="Physical Computing and IoT Programming">
                     <option value="Web Programming">       
                 </datalist>
-                <span>Total number of questions</span><input type="text" style="margin-left: 20.5%"><br>
-                <span>Total time in minute</span><input type="text"><br>
+                <span>Total number of questions</span><input type="text" style="margin-left:16.9%"><br>
+                <span>Total time in minute</span><input type="text" style="margin-left:22.9%"><br>
                 <button type="Submit">Create Exam</button>
             </div>
         </form>
