--- a/static/CreateAccount.html
+++ b/static/CreateAccount.html
@@ -48,7 +48,7 @@
                 <legend style="color:skyblue;font-size:25px">Create account zone</legend>
                 <label><input type="text" placeholder="Email address" name="EMAIL"></br></label>
                 <label><input type="password" placeholder="Password" name="PASSWORD"><br></label>
-                <label><button >Create account</button></label>
+                <label><button type="submit" >Create account</button></label>
             </fieldset>
         </form>
     </body>
