done with professor zone

--- a/static/CreateAccount.html
+++ b/static/CreateAccount.html
@@ -37,7 +37,7 @@
             }
         </style>
     </head>
-    <body>
+    <body style="background-color: #f1f1f1;">
 
         <header class="top">
             <span style="position:relative;top:10px;left:10px"><b>ExamSoft</b><prep>&nbsp;&nbsp; Rizvi College</span>
