--- a/static/CreateAccount.html
+++ b/static/CreateAccount.html
@@ -46,7 +46,7 @@
         <form action="/Registration" method="POST" name="c">
             <fieldset style="width:40%;height:50%;margin-top:5%;margin-left:30%;">
                 <legend style="color:skyblue;font-size:25px">Create account zone</legend>
-                <label><input type="text" placeholder="Email address" name="EMAIL"></br></label>
+                <label><input type="text" placeholder="Email address" name="EMAIL" pattern=".+@.+\..+"></br></label>
                 <label><input type="password" placeholder="Password" name="PASSWORD"><br></label>
                 <label><button type="submit" >Create account</button></label>
             </fieldset>
